--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./favicon.ico?v=2"/>
+    <link rel="shortcut icon" type='image/jpg' href="%PUBLIC_URL%/favicon.ico?v=2" />
     <script src="https://kit.fontawesome.com/bd487381c4.js" crossorigin="anonymous"></script>
     <title>raceR</title>
 </head>
