--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="./favicon.ico?v=2"/>
     <link rel="shortcut icon" type='image/jpg' href="%PUBLIC_URL%/favicon.ico?v=2" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/bd487381c4.js" crossorigin="anonymous"></script>
     <title>raceR</title>
 </head>
